# SIMSPARK

./: .gitignore  build.sh  clean.sh  readme.md
rcssserver3d/: CMakeLists.txt  rcssserver3d_config.h.cmake
rcssserver3d/guiplugin/soccercontrolframe/: CMakeLists.txt
rcssserver3d/rcssagent3d/: CMakeLists.txt
rcssserver3d/rcssmonitor3d/: CMakeLists.txt  main.cpp
rcssserver3d/rcssserver3d/: CMakeLists.txt  main.cpp
rcssserver3d/sparkgui/: CMakeLists.txt  main.cpp
scripts/: simspark_normal_mode.sh  simspark_optimize_mode.sh
spark/: CMakeLists.txt  sparkconfig.h.cmake
spark/carbon/: CMakeLists.txt  carbon.cpp  libraryloader.cpp  libraryloader.h  settingsdialog.h  setupdialog.cpp  simspark.cpp  windowmanager.cpp
spark/carbon/cutelogger/: logger.cpp
spark/guilayout/guigridlayout/: CMakeLists.txt  guigridlayout.cpp  guigridlayout.h
spark/guilayout/guisimplelayout/: CMakeLists.txt  guisimplelayout.cpp  guisimplelayout.h
spark/guiplugin/logframe/: CMakeLists.txt
spark/guiplugin/monitorframe/: CMakeLists.txt
spark/guiplugin/scenegraphframe/: CMakeLists.txt
spark/guiplugin/setupframe/: CMakeLists.txt
spark/guiplugin/simulationframe/: CMakeLists.txt
spark/lib/salt/: sharedlibrary.cpp  sharedlibrary.h
spark/lib/zeitgeist/: core.cpp  core.h
spark/plugin/inputqt/: CMakeLists.txt
spark/plugin/openglsysqt/: CMakeLists.txt
